# synclite-logger-rust

./: .gitignore  Cargo.toml  README.md  test_out.txt
.cargo/: config.toml
crates/consolidator/core/: Cargo.toml
crates/consolidator/core/src/: datatype_mapper.rs  lib.rs
crates/consolidator/runtime/: Cargo.toml  dst.db
crates/consolidator/runtime/src/: lib.rs  monitor.rs
crates/consolidator/state/: Cargo.toml
crates/consolidator/state/src/: lib.rs
crates/logger/archiver/: Cargo.toml
crates/logger/archiver/src/: fs.rs  lib.rs  s3.rs  sftp.rs
crates/logger/bindings-c/: Cargo.toml  build.rs
crates/logger/bindings-c/src/: lib.rs
crates/logger/bindings-java/: Cargo.toml
crates/logger/bindings-java/src/: lib.rs
crates/logger/bindings-python/: Cargo.toml
crates/logger/bindings-python/src/: lib.rs
crates/logger/config/: Cargo.toml
crates/logger/config/src/: lib.rs
crates/logger/core/: Cargo.toml
crates/logger/core/src/: error.rs  ids.rs  lib.rs  record.rs  sql_policy.rs
crates/logger/db-duckdb/: Cargo.toml  build.rs
crates/logger/db-duckdb/src/: lib.rs
crates/logger/db-duckdb/tests/: end_to_end.rs  segment_rotation.rs
crates/logger/db-sqlite/: Cargo.toml
crates/logger/db-sqlite/src/: lib.rs
crates/logger/db-sqlite/tests/: end_to_end.rs  segment_rotation.rs
crates/logger/db-traits/: Cargo.toml
crates/logger/db-traits/src/: lib.rs
crates/logger/log/: Cargo.toml
crates/logger/log/src/: lib.rs  scan.rs  segment.rs  status.rs
crates/logger/metadata/: Cargo.toml
crates/logger/metadata/src/: lib.rs
crates/logger/runtime/: Cargo.toml
crates/logger/runtime/src/: lib.rs
crates/logger/shipper/: Cargo.toml
crates/logger/shipper/src/: cleaner.rs  lib.rs
crates/logger/shipper/tests/: retry_and_clean.rs  rolling_segments.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/synclite/: Cargo.toml  README.md  build.rs
crates/synclite-archiver/: Cargo.toml
crates/synclite-archiver/src/: fs.rs  lib.rs  s3.rs  sftp.rs
crates/synclite-bindings-c/: Cargo.toml
crates/synclite-bindings-c/src/: lib.rs
crates/synclite-config/: Cargo.toml
crates/synclite-config/src/: lib.rs
crates/synclite-core/: Cargo.toml
crates/synclite-core/src/: error.rs  ids.rs  lib.rs  record.rs  sql_policy.rs
crates/synclite-db-duckdb/: Cargo.toml  build.rs
crates/synclite-db-duckdb/src/: lib.rs
crates/synclite-db-duckdb/tests/: end_to_end.rs
crates/synclite-db-sqlite/: Cargo.toml
crates/synclite-db-sqlite/src/: lib.rs
crates/synclite-db-sqlite/tests/: end_to_end.rs
crates/synclite-db-traits/: Cargo.toml
crates/synclite-db-traits/src/: lib.rs
crates/synclite-log/: Cargo.toml
crates/synclite-log/src/: lib.rs  scan.rs  segment.rs  status.rs
crates/synclite-logger/: Cargo.toml
crates/synclite-logger/examples/: README.md  synclite_device_artifacts_demo.rs  synclite_duckdb.rs  synclite_duckdb_store.rs  synclite_rusqlite.rs  synclite_rusqlite_store.rs  synclite_streaming.rs
crates/synclite-logger/src/: app_lock.rs  backup.rs  duckdb.rs  layout.rs  lib.rs  metadata.rs  mover.rs  rusqlite.rs  sql_split.rs
crates/synclite-logger/tests/: device_integration.rs  facade.rs
crates/synclite-metadata/: Cargo.toml
crates/synclite-metadata/src/: lib.rs
crates/synclite-runtime/: Cargo.toml
crates/synclite-runtime/src/: lib.rs
crates/synclite-shipper/: Cargo.toml
crates/synclite-shipper/src/: cleaner.rs  lib.rs
crates/synclite-shipper/tests/: retry_and_clean.rs  rolling_segments.rs
crates/synclite/examples/: README.md  synclite_device_artifacts_demo.rs  synclite_duckdb.rs  synclite_duckdb_store.rs  synclite_rusqlite.rs  synclite_rusqlite_store.rs  synclite_streaming.rs
crates/synclite/src/: cdc_native.rs  duckdb.rs  lib.rs  pause.rs  reinitialize.rs  rusqlite.rs  status.rs
crates/synclite/src/consolidator/: mod.rs
crates/synclite/src/logger/: app_lock.rs  backup.rs  layout.rs  metadata.rs  mover.rs  sql_split.rs
crates/synclite/tests/: device_integration.rs  facade.rs  pause_resume.rs  reinitialize.rs  sync_status.rs
include/: synclite.h  synclite.hpp
python/: README.md  pyproject.toml
python/scripts/: build_linux_wheels.sh  build_linux_wheels_launcher.py  repair_wheel.py
python/src/synclite/: __init__.py  _native.pyi  _native_loader.py  py.typed
python/tests/: test_native_loader.py
samples/: README.md
samples/cpp/: CMakeLists.txt  README.md  synclite_duckdb.cpp
samples/python/: README.md
samples/rust/: Cargo.toml  README.md
samples/rust/.cargo/: config.toml
scripts/: prepare-sqlite-native.ps1  prepare-sqlite-native.sh
