[workspace]
resolver = "2"
exclude = [
    "samples",
]
members = [
    "crates/logger/core",
    "crates/logger/config",
    "crates/logger/metadata",
    "crates/logger/db-traits",
    "crates/logger/log",
    "crates/logger/db-sqlite",
    "crates/logger/db-duckdb",
    "crates/logger/archiver",
    "crates/logger/shipper",
    "crates/consolidator/core",
    "crates/consolidator/state",
    "crates/consolidator/runtime",
    "crates/synclite",
    "crates/logger/runtime",
    "crates/logger/bindings-c",
    "crates/logger/bindings-python",
    "crates/logger/bindings-java",
    "crates/observability",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.86"
license = "Apache-2.0"
authors = ["SyncLite contributors"]
repository = "https://github.com/synclite/synclite"
homepage = "https://www.synclite.io"

[workspace.dependencies]
# Core
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
regex = "1.11"

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
java-properties = "2.0"

# Prometheus exposition library. We do NOT enable the `push` feature: it
# transitively pulls reqwest -> native-tls -> openssl-sys, which is a
# nightmare to cross-compile. Monitor (consolidator-runtime) ships its own
# tiny raw-TCP pusher in `monitor::send_http_post`.
prometheus = { version = "0.13", default-features = false }

# Metadata DB (Cargo-managed bundled SQLite; much lighter than DuckDB source builds)
rusqlite = { version = "0.39", features = ["bundled"] }

# DuckDB is built into the Rust library so SyncLite can start without a
# separate duckdb.dll sidecar. This keeps SQLite and non-DuckDB flows
# independent of the optional DuckDB runtime.
# Pin exact duckdb-rs release that maps to DuckDB 1.5.2 (Java uses 1.5.2.0).
# `DUCKDB_DOWNLOAD_LIB=true` (set in .cargo/config.toml) tells libduckdb-sys to
# download a pre-built shared library from DuckDB's GitHub releases instead of
# compiling the full C++ source tree, which cuts hundreds of Compiling lines.
duckdb = { version = "=1.10502.0", default-features = false }
postgres = "0.19"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
parking_lot = "0.12"

# Filesystem
fs2 = "0.4"

# Async runtime + AWS SDK (S3 archiver, optional)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls", "rt-tokio"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls", "rt-tokio"] }
aws-credential-types = { version = "1", default-features = false }
aws-smithy-types = { version = "1", default-features = false }

# SFTP archiver (optional)
russh = { version = "0.45" }
russh-sftp = { version = "2.0" }
russh-keys = { version = "0.45" }
async-trait = "0.1"

# Internal crates (path deps resolved at workspace root)
logger-core = { package = "logger-core", path = "crates/logger/core", version = "1.0.0" }
logger-config = { package = "logger-config", path = "crates/logger/config", version = "1.0.0" }
logger-metadata = { package = "logger-metadata", path = "crates/logger/metadata", version = "1.0.0" }
logger-db-traits = { package = "logger-db-traits", path = "crates/logger/db-traits", version = "1.0.0" }
logger-log = { package = "logger-log", path = "crates/logger/log", version = "1.0.0" }
logger-db-sqlite = { package = "logger-db-sqlite", path = "crates/logger/db-sqlite", version = "1.0.0" }
logger-db-duckdb = { package = "logger-db-duckdb", path = "crates/logger/db-duckdb", version = "1.0.0" }
logger-archiver = { package = "logger-archiver", path = "crates/logger/archiver", version = "1.0.0" }
logger-shipper = { package = "logger-shipper", path = "crates/logger/shipper", version = "1.0.0" }
consolidator-core = { path = "crates/consolidator/core", version = "1.0.0" }
consolidator-state = { path = "crates/consolidator/state", version = "1.0.0" }
consolidator-runtime = { path = "crates/consolidator/runtime", version = "1.0.0" }
synclite = { path = "crates/synclite", package = "synclite-rs", version = "1.0.0" }
logger-runtime = { package = "logger-runtime", path = "crates/logger/runtime", version = "1.0.0" }
synclite-observability = { path = "crates/observability", version = "1.0.0" }

# Test-only
tempfile = "3.10"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"


