[package]
name = "synclite-bindings-c"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
synclite-runtime.workspace = true
synclite-db-traits.workspace = true
