[package]
name = "synclite-db-duckdb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "DuckDB backend for the SyncLite logger."

[dependencies]
synclite-core.workspace = true
synclite-db-traits.workspace = true
synclite-log.workspace = true
duckdb.workspace = true
rusqlite.workspace = true

[dev-dependencies]
duckdb.workspace = true
rusqlite.workspace = true
