[package]
name = "synclite-db-traits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Backend-agnostic traits for SyncLite-logger database devices."

[dependencies]
synclite-core.workspace = true
