[package]
name = "synclite-log"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Log-segment writer for the SyncLite logger (SQLite-backed segments)."

[dependencies]
synclite-core.workspace = true
rusqlite.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true
