[package]
name = "synclite-shipper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Background worker that ships finalized log segments through one or more archivers."

[dependencies]
synclite-core.workspace = true
synclite-archiver.workspace = true
parking_lot.workspace = true
tracing.workspace = true

[dev-dependencies]
synclite-archiver = { workspace = true, features = ["fs"] }
synclite-db-sqlite.workspace = true
synclite-db-traits.workspace = true
synclite-core.workspace = true
tempfile.workspace = true
rusqlite.workspace = true
