[package]
name = "consolidator-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared consolidator types and layout helpers."

[lib]
name = "consolidator_core"

[dependencies]
serde_json = { workspace = true }
tracing.workspace = true
