[package]
name = "consolidator-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Consolidator state, checkpoint, and bootstrap helpers."

[lib]
name = "consolidator_state"

[dependencies]
consolidator-core.workspace = true
logger-core.workspace = true
rusqlite.workspace = true
duckdb.workspace = true
postgres.workspace = true
tracing.workspace = true


