[package]
name = "synclite-bindings-java"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "synclite_jni"
crate-type = ["cdylib"]

[dependencies]
consolidator-core.workspace = true
consolidator-runtime.workspace = true
synclite.workspace = true
jni = "0.21"
