[package]
name = "logger-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core types, errors, and IDs for the SyncLite logger runtime."

[dependencies]
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
regex.workspace = true


