[package]
name = "logger-db-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SQLite backend for the SyncLite logger."

[dependencies]
logger-core.workspace = true
logger-db-traits.workspace = true
logger-log.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile.workspace = true



