[package]
name = "logger-db-traits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Backend-agnostic traits for SyncLite database devices."

[dependencies]
logger-core.workspace = true



