[package]
name = "logger-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
logger-core.workspace = true
logger-config.workspace = true
logger-db-traits.workspace = true
synclite.workspace = true



